fix bug 1.2: Removed overflow from html tag, changed header to position fixed instead of sticky

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,13 +5,14 @@
     
 
 }
-html, body{
+body{
     overflow-x: hidden;
 }
 header {
-    position: sticky;
+    position: fixed;
     z-index: 999;
     top: 0;
+    width: 100%;
 }
 
 .font-heading {
